<resources>
    <string name="app_name">Velaan</string>
    <string name="invalid_name" translatable="false">Enter valid name</string>
    <string name="invalid_mobile" translatable="false">Enter valid Number</string>
    <string name="invalid_email">Enter valid email</string>
    <string name="invalid_password">minimum 6 characters</string>

    <string-array name="city">
        <item>Madurai</item>
        <item>Chennai</item>
        <item>Tiruvannamalai</item>
        <item>Virudhunagar</item>
        <item>Vellore</item>
        <item>Tiruvarur</item>
        <item>Thanjavur</item>
        <item>Coimbatore</item>
        <item>Mahabalipuram</item>
        <item>Kanyakumari</item>
        <item>Kanchipuram</item>
        <item>Rameswaram</item>
        <item>Udhagamandalam</item>
        <item>Coonoor</item>
        <item>Kodaikanal</item>
        <item>Trichy</item>
        <item>Dharmapuri</item>
        <item>Velankanni</item>
        <item>Chettinad</item>
        <item>Kumbakonam</item>
        <item>Krishnagiri</item>
        <item>Poompuhar</item>
        <item>Puddukottai</item>
        <item>Sivagangai</item>
        <item>Theni</item>
        <item>Tirunelveli</item>
        <item>Thoothukudi</item>
        <item>Thiruchirappalli</item>
        <item>Tiruppur</item>
        <item>Salem</item>
        <item>Erode</item>
        <item>Dindugal</item>
        <item>Ranipet</item>
        <item>Karur</item>
        <item>Sivakasi</item>
        <item>Hosur</item>
        <item>Nagercoil</item>
        <item>Kumarapalayam</item>
        <item>Karaikkudi</item>
        <item>Neyveli</item>
        <item>Cuddalore</item>
        <item>Pollachi</item>
        <item>Rajapalayam</item>
        <item>Ambur</item>
        <item>Nagapattinam</item>
        <item>Gudiyatham</item>
        <item>Vaniyambadi</item>

    </string-array>
    <string-array name="state">
        <item>TamilNadu</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal  Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>AndhraPradesh</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>

    </string-array>
    <string-array name="language">
        <item>தமிழ்</item>
        <item>English</item>


    </string-array>


    <string name="title_activity_products" translatable="false">products</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="title_activity_home">Home</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="login">LOGIN</string>
    <string name="loginbutton">LOGIN</string>
    <string name="email_id">Email-ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_a_user">Not a User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">SEND OTP</string>
    <string name="verify">VERIFY</string>
    <string name="ENTER_OTP">Enter OTP</string>
    <string name="resendotp">RESEND</string>
    <string name="register">REGISTER</string>
    <string name="email_id_register">Email-ID</string>
    <string name="phone_no">Phone NO</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_button">REGISTER</string>
    <string name="statereg">State</string>
    <string name="myprofile">MY PROFILE</string>
    <string name="change">Change</string>
    <string name="save">SAVE</string>
    <string name="Buy">BUY</string>
    <string name="product">PRODUCT</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price/KG</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="emailid">Email-ID</string>
    <string name="sell">SELL</string>
    <string name="home">Home</string>
    <string name="myprofilee">My Profile</string>
    <string name="contactus">Contact Us</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="myfav">My Favourites</string>
    <string name="velaaan">VELAAN</string>

    <string name="PRICE">Price</string>
    <string name="phonr_no">"Contact "</string>
    <string name="velaan">VELAAN</string>
    <string name="buyy">Buy</string>
    <string name="selll">Sell</string>
    <string name="call">Call</string>
    <string name="loading">Loading...</string>
    <string name="validtill">Valid Till</string>
    <string name="validity">Valid From</string>
    <string name="sendd">Send</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="contactmail">contact@velaanapp@gmail.com</string>
    <string name="UpDate">Update</string>
    <string name="myselliNg">My Sellings</string>
    <string name="swipe">Swipe to Delete</string>
    <string name="clickto">Click to Update</string>
    <string name="Productt">Product</string>
    <string name="invalid_confirm_password">invalid confirm password</string>


</resources>

